--- a/index.html
+++ b/index.html
@@ -90,13 +90,9 @@
             </p>
         </section>
 
-        <!-- Site Images -->
+        <!-- Site Image -->
         <section class="mb-12">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                <img src="./rixam_office_1.png" alt="Rick's Asset Maintenance Office 1" class="w-full h-64 rounded-lg shadow-md object-cover" onerror="this.style.display='none'">
-                <img src="./rixam_office_2.png" alt="Rick's Asset Maintenance Office 2" class="w-full h-64 rounded-lg shadow-md object-cover" onerror="this.style.display='none'">
-                <img src="./rixam_office_3.png" alt="Rick's Asset Maintenance Office 3" class="w-full h-64 rounded-lg shadow-md object-cover" onerror="this.style.display='none'">
-            </div>
+            <img src="./rixam_office_1.png" alt="Rick's Asset Maintenance Office" class="block w-full lg:w-2/3 mx-auto h-auto rounded-lg shadow-lg object-cover" onerror="this.style.display='none'">
         </section>
 
         <!-- Pricing Options -->
